syntax="proto3";

option go_package = "./libs;question";

message Type {
  reserved 1;
  reserved "id";
  string name = 2;
  uint32 created_by_id = 3;
  string created_date = 4;
  string updated_date = 5;
  bool active = 6;
}

message CreateTypeRequest {
  Type type = 1;
}
message CreateTypeResponse {
  Type type = 1;
}

message UpdateTypeRequest {
  Type type = 1;
  uint32 id = 2;
}
message UpdateTypeResponse {
  Type type = 1;
}

message ListTypeRequest{}
message ListTypeResponse {
  repeated Type type = 1;
}

message RetrieveTypeRequest {
  uint32 id = 1;
}
message RetrieveTypeResponse {
  Type type = 1;
}

message DeleteTypeRequest {
  uint32 id = 1;
}
message DeleteTypeResponse {
  bool success = 1;
  string response = 2;
}